# backend

./: .gitignore  README.md  app.py  deploy.sh  gunicorn.conf.py  pyproject.toml  server.py  setup-vps.sh  test-payload.json
.chalice/: config.json
.chalice/deployed/: dev.json
backend/: __init__.py  connection.py  friend.py  journey.py  price.py  query.py  request.py  response.py  results.py  search.py  time_frame.py  trip.py
backend/apis/: __init__.py  connected_airports.py  convert_currency.py  errors.py  eur_rate.py  precise_connections.py  rough_connections.py  ryanair.py  world.py
backend/caching/: __init__.py  cache_collection.py  decorator.py  dict_io.py  expiring_cache.py  poll.py
backend/geography/: __init__.py  airport.py  city.py  country.py  world.py
backend/scraper/: eur_rate.py  precise_connections.py  rough_connections.py  world.py
backend/search/: pick_varied.py  precise_trips.py  rough_trips.py  search.py
chalicelib/: connection.py  friend.py  journey.py  price.py  request.py  response.py  time_frame.py  timeframe.py  trip.py
chalicelib/geography/: __init__.py  world.py
chalicelib/scraper/: __init__.py  errors.py  eur_rate.py  geography.py  precise_connections.py  rough_connection.py  rough_connections.py  ryanair.py  search_flights.py  search_parameters.py  world.py
doc/: data-model.jsonc
test/: test_expiring_cache.py  test_query.py  test_request.py  test_response.py  test_results.py  test_search.py
test/apis/: test_connected_airports.py  test_convert_currency.py  test_rough_connection.py  test_world.py
test/caching/: test_decorator.py  test_dict_io.py  test_expiring_cache.py  test_poll.py
test/scraper/: test_geography.py  (+4 more)
(+17 files in other folders)
