[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for wherever.be"
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "~3.8"
beautifulsoup4 = "^4.10.0"
lxml = "^4.8.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
chalice = "^1.26.6"
black = "^22.1.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
