[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for wherever.be"
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "~3.8"
requests = "^2.27.1"
ratelimit = "^2.2.1"
tenacity = "^8.0.1"
Flask = "^2.0.3"
Flask-Cors = "^3.0.10"
tqdm = "^4.63.0"
flask-talisman = "^0.8.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
